[gd_scene load_steps=3 format=3 uid="uid://bkau00fj4iq3m"]

[ext_resource type="Script" uid="uid://dtcqellqw7q6v" path="res://user_interface/resource/resource.gd" id="1_bn3c3"]
[ext_resource type="PackedScene" uid="uid://dcrisb6jq3ase" path="res://user_interface/division_item/division_item.tscn" id="2_jjqua"]

[node name="Resource" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn3c3")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BackgroundPanel"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Add a Resource"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxCTitle" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LblTitle" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCTitle"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Title"
fit_content = true

[node name="LeTitle" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCTitle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
theme_override_constants/outline_size = 1

[node name="HBoxCISBN" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LblISBN" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCISBN"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "ISBN
"
fit_content = true

[node name="LeISBN" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCISBN"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxCResourceType" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LblResourceType" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCResourceType"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Resource Type
"
fit_content = true

[node name="ObResourceType" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCResourceType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
theme_override_colors/font_color = Color(0.039215688, 0.039215688, 0.23529412, 1)

[node name="HBoxCContributor" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ObContributor" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCContributor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.039215688, 0.039215688, 0.23529412, 1)

[node name="LeContributorName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCContributor"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxSubject" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LblSubuject" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxSubject"]
layout_mode = 2
size_flags_horizontal = 3
text = "Subject"

[node name="ObSubject" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxSubject"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="FCAdditionalInfo" type="FoldableContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "Additional Information"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo"]
visible = false
layout_mode = 2

[node name="HBoxUrl" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblUrl" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxUrl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Web Url"

[node name="LEUrl" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxUrl"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxPublisher" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblPublisher" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxPublisher"]
layout_mode = 2
size_flags_horizontal = 3
text = "Publisher"

[node name="LePublisher" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxPublisher"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HboxCopyrightDate" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblCopyrightDate" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HboxCopyrightDate"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copyright Date"

[node name="LECopyrightDate" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HboxCopyrightDate"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxYearWritten" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblYearWritten" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxYearWritten"]
layout_mode = 2
size_flags_horizontal = 3
text = "Year Written"

[node name="LeYearWritten" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxYearWritten"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxNumberOfPages" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblNumberOfPages" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxNumberOfPages"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of Pages"

[node name="LeNumberOfPages" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxNumberOfPages"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxEdition" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblEdition" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxEdition"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edition"

[node name="LeEdition" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxEdition"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxContainer8" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer"]
layout_mode = 2

[node name="LblDescription" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description"

[node name="LeDescription" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/FCAdditionalInfo/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="HBoxCDivisionType" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LblDivisionType" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCDivisionType"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Divistion Type"
fit_content = true

[node name="ObDivisionType" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxCDivisionType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxCDivisionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PanelDivision" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanel"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision"]
layout_mode = 2

[node name="VBoxCDivision" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Division" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision/ScrollContainer/VBoxCDivision" instance=ExtResource("2_jjqua")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision"]
layout_mode = 2
alignment = 2

[node name="BtnDivision" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add More Divisons"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ControlSpacer1" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="BtnSchedule" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Schedule It"

[node name="BtnSave" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Save"

[node name="BtnEdit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="BtnUpdate" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="BtnDelete" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="ControlSpacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxCDivisionType/ObDivisionType" to="." method="_on_ob_divistion_type_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxCDivisionList/PanelDivision/VBoxContainer/BtnDivision" to="." method="_on_btn_division_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BtnSave" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BtnEdit" to="." method="_on_btn_edit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BtnUpdate" to="." method="_on_btn_update_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BtnDelete" to="." method="_on_btn_delete_pressed"]
